--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,7 +78,7 @@ p {
 .benefits {
     margin-right: 20px;
     padding: 20px;
-    clear: both;
+    clear: right;
     float: right;
     width: 20%;
     height: 100%;
